changed code test

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <div>
             <h1>
-                This is the ORIGINAL code!
+                This is the NEW code!
             </h1>
         </div>
         
